Front-end 50% Finishing up with presentation layer for all-facing layer. Customer-facing will begin shortly. Issues encountered: - CSS grid- learned that if the font is too big on the edge, extra white space appears on the page. - Placing sections- although functional, tagline component needs to collapse on a smaller screen somehow, looking into either responsive text or grid features.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,23 @@
-.App {
-  text-align: center;
+
+@font-face {
+  font-family: MinistryofMoron;
+  src: url('./resources/a_02_fonts/Ministry\ of\ Moron.otf');
 }
 
-.App-header {
-  font-family: Graduate;
+.App {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  background-image: url('./resources/a_01_images/background_1.png');
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: top center;
+  height: 100vh;
+  text-decoration-style: none;
+}
+
+.logoStyle {
+  height: 15vh;
 }
