--- a/client/src/components/01-Menu/menu.css
+++ b/client/src/components/01-Menu/menu.css
@@ -1,3 +1,14 @@
 .menu {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    grid-column: 3/6;
+    grid-row: 5/6;
+    border: 10px solid #24f1ff;
+    /* margin: 10px; */
+    margin-left: 10px;
+    background-color: white;
+    text-justify: auto;
+}
+
+a {
+    text-decoration: none;
+    word-spacing: 2vw;
 }
